--- a/App14.IASystem/Views/MainWindow.xaml
+++ b/App14.IASystem/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:App14.IASystem.ViewModels"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:wpf="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
         mc:Ignorable="d"
         Title="IASystem" Height="800" Width="1200" Loaded="Window_Loaded">
     <Window.Resources>
@@ -260,6 +261,9 @@
                                     <RowDefinition Height="250" />
                                     <RowDefinition Height="250" />
                                 </Grid.RowDefinitions>
+                                
+                                <wpf:CartesianChart Grid.Row="0" Grid.Column="0"
+                                    Series="{Binding Series}" />
                             </Grid>
                         </HeaderedContentControl>
                     </StackPanel>
