--- a/App11.HIK/Views/InPageWindow.xaml
+++ b/App11.HIK/Views/InPageWindow.xaml
@@ -1,11 +1,13 @@
-﻿<Window x:Class="App11.HIK.Views.PageInWindow"
+﻿<Window x:Class="App11.HIK.Views.InPageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:converter="clr-namespace:App11.HIK.Converter"
+        xmlns:vm="clr-namespace:App11.HIK.ViewModels"
         mc:Ignorable="d"
-        Title="PageInWindow" Height="700" Width="850">
+        d:DataContext="{d:DesignInstance Type=vm:InPageViewModel, IsDesignTimeCreatable=True}"
+        Title="InPageWindow" Height="700" Width="850">
     <Window.Resources>
         <converter:TypeToImageSourceConverter x:Key="TypeToImageSourceConverter" />
     </Window.Resources>
@@ -14,17 +16,33 @@
             <ColumnDefinition Width="250" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <ListView x:Name="ListViewDevice" Margin="5" SelectionChanged="MySelectionChanged" Grid.Column="0">
+        <ListView ItemsSource="{Binding RobotList}"
+                  Margin="5" SelectionChanged="MySelectionChanged" Grid.Column="0">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    
+                    <Setter
+                        Property="Tag"
+                        Value="{Binding DataContext, RelativeSource={RelativeSource AncestorType=ListView}}" />
+
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu DataContext="{Binding PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
+                                <MenuItem
+                                    Header="Delete"
+                                    Command="{Binding DeleteCommand}"
+                                    CommandParameter="{Binding PlacementTarget.Content, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid Background="{DynamicResource SystemControlBackgroundAltHighBrush}"
                           Margin="0,0,0,0" Height="60"
-                          AutomationProperties.Name="{Binding NodeName, Mode=OneTime}">
+                          AutomationProperties.Name="{Binding NodeName, Mode=OneTime}" >
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="50" />
                             <ColumnDefinition Width="*" />
@@ -32,7 +50,7 @@
                         <Border Grid.Column="0">
                             <Image Source="{Binding ModelType, Converter={StaticResource TypeToImageSourceConverter}}"
                                    Stretch="Fill" Margin="5,0,5,0" Height="40" />
-                        </Border>
+                        </Border> 
 
                         <Grid Margin="0,3,3,3" Grid.Column="1">
                             <Grid.RowDefinitions>
