--- a/App14.IASystem/Views/MainWindow.xaml
+++ b/App14.IASystem/Views/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:vm="clr-namespace:App14.IASystem.ViewModels"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:wpf="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
         mc:Ignorable="d"
         Title="IASystem" Height="800" Width="1200" Loaded="Window_Loaded">
     <Window.Resources>
@@ -41,42 +42,21 @@
                     <StackPanel Grid.Column="1">
                         <HeaderedContentControl Header="基本信息" Margin="0,5,0,0"
                                                 Style="{StaticResource H3HeaderedContentControl}">
-                            <Grid>
-                                <Grid.Resources>
-                                    <Style TargetType="TextBlock">
-                                        <Setter Property="Margin" Value="5" />
-                                    </Style>
-                                </Grid.Resources>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="65" />
-                                    <ColumnDefinition Width="65" />
-                                    <ColumnDefinition Width="65" />
-                                    <ColumnDefinition Width="65" />
-                                    <ColumnDefinition Width="65" />
-                                    <ColumnDefinition Width="65" />
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="30" />
-                                    <RowDefinition Height="40" />
-                                </Grid.RowDefinitions>
-                                <TextBlock Grid.Row="0" Grid.Column="0" Text="鱼塘" />
-                                <TextBlock Grid.Row="0" Grid.Column="2" Text="进度" />
-                                <TextBlock Grid.Row="0" Grid.Column="4" Text="添加日期" />
-
-                                <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Center"
-                                           Text="{Binding SelectedPool.Name}" />
-                                <TextBlock Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="Center"
-                                           Text="{Binding SelectedPool.Progress}" />
-                                <DatePicker Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" Width="120"
+                            <ui:SimpleStackPanel Spacing="5">
+                                <TextBox ui:ControlHelper.Header="鱼塘名:" Margin="5,0,0,0" Width="160"
+                                         VerticalAlignment="Center" HorizontalAlignment="Left"
+                                         Text="{Binding SelectedPool.Name}" />
+                                <Slider ui:ControlHelper.Header="进度:" Margin="5,0,0,0" Width="160"
+                                         VerticalAlignment="Center" HorizontalAlignment="Left"
+                                        Minimum="0" Maximum="100"
+                                         Value="{Binding SelectedPool.Progress}" />
+                                <DatePicker ui:ControlHelper.Header="创建日期:" Margin="5,0,0,0" Width="120"
                                             SelectedDate="{Binding SelectedPool.AddDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                            </Grid>
-                        </HeaderedContentControl>
-
-                        <HeaderedContentControl Header="鱼塘说明" Margin="0,5,0,0"
-                                                Style="{StaticResource H3HeaderedContentControl}">
-                            <TextBlock Text="{Binding SelectedPool.Note}" Height="100" Margin="5"
-                                       TextTrimming="CharacterEllipsis"
-                                       TextWrapping="Wrap" />
+                                <TextBox ui:ControlHelper.Header="鱼塘说明:" Margin="5,0,0,0" Width="600"
+                                         HorizontalAlignment="Left"
+                                         Text="{Binding SelectedPool.Note}"
+                                         TextWrapping="Wrap" />
+                            </ui:SimpleStackPanel>
                         </HeaderedContentControl>
 
                         <HeaderedContentControl Header="设备列表" Margin="0,5,0,0"
@@ -261,9 +241,9 @@
                                     <RowDefinition Height="250" />
                                     <RowDefinition Height="250" />
                                 </Grid.RowDefinitions>
-                                
+
                                 <wpf:CartesianChart Grid.Row="0" Grid.Column="0"
-                                    Series="{Binding Series}" />
+                                                    Series="{Binding Series}" />
                             </Grid>
                         </HeaderedContentControl>
                     </StackPanel>
